[metadata]
name = manki
description = Convert Anki Decks from Markdown Files
author = Frieder Frank
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = manki
install_requires =
    beautifulsoup4>=4.10.0
    Markdown>=3.3.6
    requests>=2
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.entry_points]
console_scripts =
  manki=manki.main:main

[options.package_data]
manki.templates = *.html

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24


[flake8]
max-line-length = 120